<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        //顶部栏
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/limeGreen"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:text="AI Planting"
                android:textSize="22sp"
                android:textColor="@color/bg_white"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.Toolbar>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/ly_tab_menu"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:background="@color/bg_white">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/ly_tab_menu_balcony"
                android:gravity="center">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/tab_menu_balcony"
                        style="@style/tab_menu_text"
                        android:text="@string/tab_menu_balcony"
                        android:drawableTop="@drawable/tab_menu_balcony"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/ly_tab_menu_book"
                android:gravity="center">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/tab_menu_book"
                        android:text="@string/tab_menu_book"
                        style="@style/tab_menu_text"
                        android:drawableTop="@drawable/tab_menu_book"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/ly_tab_menu_store"
                android:gravity="center">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dp">
                    <TextView
                        android:text="@string/tab_menu_store"
                        style="@style/tab_menu_text"
                        android:id="@+id/tab_menu_store"
                        android:drawableTop="@drawable/tab_menu_store"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/ly_tab_menu_community"
                android:gravity="center">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dp">
                    <TextView
                        android:text="@string/tab_menu_community"
                        style="@style/tab_menu_text"
                        android:id="@+id/tab_menu_community"
                        android:drawableTop="@drawable/tab_menu_community"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/ly_tab_menu_my"
                android:gravity="center">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dp">
                    <TextView
                        android:text="@string/tab_menu_my"
                        android:id="@+id/tab_menu_my"
                        style="@style/tab_menu_text"
                        android:drawableTop="@drawable/tab_menu_my"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        //fragment的容器
        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:layout_above="@id/ly_tab_menu"
            android:id="@+id/ly_content">
        </android.support.design.widget.CoordinatorLayout>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:text="This is Menu"
        android:textSize="30sp"
        android:background="#fff"/>
</android.support.v4.widget.DrawerLayout>